# cv-advanced-hw

./: .gitignore  plan.md
hw-4-object-tracking/: README.md  creare_track.py  fastapi_server.py  index.html  kalman_filter.py  metrics.py  models.py  soft_tracker.py  strong_tracker.py  task_desc.md  track_1.py  track_10.py  track_11.py  track_12.py  track_13.py  track_14.py  track_15.py  track_16.py  track_17.py  track_18.py  track_19.py  track_2.py  track_3.py  track_4.py  track_5.py  track_6.py  track_7.py  track_8.py  track_9.py
hw1-classic-cv/: Readme.md  requirements.txt
hw2-metric-learning/: baseline.py  experiments_notebook.ipynb  knn_based_validation.py  margin_based_train.py  margin_based_validation.py  proxy_based_train.py  proxy_based_validation.py  requirements.txt  split_dataset.py  torch_metrics.py  val.csv  validate_with_basefile.py
hw3-object-detection/: .gitignore  check.ipynb  config.py  detect.py  pyproject.toml  test.ipynb  train.py
hw3-object-detection-v2/: .gitignore  config.py  data_loader.py  data_roboflow.py  detect.ipynb  eval.ipynb  evaluate.py  loss.py  models.py  plan.md  plot.py  predict.py  pyproject.toml  train.py  utils.py
hw3-object-detection/loaders/: data_loader.py
hw3-object-detection/model/: loss.py  model.py
hw3-object-detection/utils/: nms.py  utils.py
hw4-object-detection/: calculate_mean_rgb.py  convert.ipynb  detect.py  main.py  pyproject.toml  train.py  transforms.py
hw4-object-detection/loaders/: data_loader.py
hw4-object-detection/model/: __init__.py  loss.py  model.py
hw4-object-detection/utils/: utils.py
hw5-pose-estimation/: README.md  interactive_run.py  requirements.txt  (+2 more)
hw6-3d-vision/: .gitignore  README.md  main.py  pyproject.toml  report.py  requirements.txt  task.md  test.py  utils.py
(+159 files in other folders)
