[project]
name = "hw4-object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.5",
    "clip",
    "inference[yolo-world]",
    "opencv-python",
    "opencv-python-headless",
    "pillow",
    "roboflow>=1.1.62",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.10",
]

[dependency-groups]
dev = [
    "lightning>=2.5.1",
    "ipykernel",
    "isort",
    "black",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
